--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="manifest" href="data:application/json,{&quot;name&quot;:&quot;SL Display&quot;,&quot;short_name&quot;:&quot;SL&quot;,&quot;display&quot;:&quot;standalone&quot;,&quot;start_url&quot;:&quot;.&quot;,&quot;theme_color&quot;:&quot;#0b0b0c&quot;,&quot;background_color&quot;:&quot;#0b0b0c&quot;}">
   <style>
     :root{
       --bg: #0b0b0c;
