--- a/index.html
+++ b/index.html
@@ -20,27 +20,32 @@
     }
 
     html, body {
-      height: 100%;
+      height: 100vh;
       margin: 0;
-      background: #111;
+      padding: 0;
+      background: var(--bg);
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     }
 
     .frame {
-      height: 100%;
+      height: 100vh;
       display: grid;
       place-items: center;
-      padding: 14px;
+      padding: 0;
     }
 
     /* LED sign container */
     .sign {
-      width: min(1100px, 96vw);
+      width: 100vw;
+      height: 100vh;
       background: var(--panel);
-      border: 10px solid #1a1a1d;
-      border-radius: 10px;
-      box-shadow: 0 10px 28px rgba(0,0,0,.45);
-      padding: 14px 16px 12px;
+      border: none;
+      border-radius: 0;
+      box-shadow: none;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
 
     /* Rows look like a single LED panel line */
