--- a/metro.html
+++ b/metro.html
@@ -3,50 +3,34 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kungshamra – SL LED Display</title>
+  <title>Bergshamra centrum – Metro</title>
 
-  <!-- Fullscreen / PWA -->
   <meta name="theme-color" content="#0b0b0c">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="mobile-web-app-capable" content="yes">
-  <link rel="manifest" href="data:application/json,{&quot;name&quot;:&quot;SL Display&quot;,&quot;short_name&quot;:&quot;SL&quot;,&quot;display&quot;:&quot;standalone&quot;,&quot;start_url&quot;:&quot;.&quot;,&quot;theme_color&quot;:&quot;#0b0b0c&quot;,&quot;background_color&quot;:&quot;#0b0b0c&quot;}">
 
   <style>
     :root{
       --bg: #0b0b0c;
       --panel: #0f0f11;
-      --border: #2a2a2e;
-      --text: #ffb000;     /* amber */
+      --text: #ffb000;
       --text-dim: rgba(255,176,0,0.75);
     }
 
     html, body {
       height: 100vh;
       margin: 0;
-      padding: 0;
       background: var(--bg);
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     }
 
-    * { -webkit-tap-highlight-color: transparent; }
-    body { user-select: none; -webkit-user-select: none; touch-action: manipulation; }
+    .frame { height: 100vh; display: grid; place-items: center; }
 
-    .frame {
-      height: 100vh;
-      display: grid;
-      place-items: center;
-      padding: 0;
-    }
-
-    /* LED sign container */
     .sign {
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       background: var(--panel);
-      border: none;
-      border-radius: 0;
-      box-shadow: none;
       padding:
         calc(20px + env(safe-area-inset-top))
         calc(20px + env(safe-area-inset-right))
@@ -59,7 +43,6 @@
       overflow: hidden;
     }
 
-    /* Rows look like a single LED panel line */
     .row {
       display: grid;
       grid-template-columns: 1fr auto;
@@ -69,26 +52,35 @@
     }
     .row:first-child { border-top: 0; }
 
-    /* Left side: "540 Universitetet" */
     .left {
       display: flex;
       gap: 18px;
       align-items: baseline;
-      min-width: 0; /* enables ellipsis */
+      min-width: 0;
       color: var(--text);
-      font-weight: 800;
+      font-weight: 900;
       font-size: clamp(22px, 3.2vw, 44px);
       letter-spacing: 0.8px;
-      text-transform: none;
-      text-shadow:
-        0 0 6px rgba(255,176,0,0.35),
-        0 0 14px rgba(255,176,0,0.18);
+      text-shadow: 0 0 6px rgba(255,176,0,0.35), 0 0 14px rgba(255,176,0,0.18);
     }
 
-    .line {
-      flex: 0 0 auto;
-      width: 3.4ch;
-      text-align: left;
+    /* Metro line badge (red pill like SL signage) */
+    .metro-badge {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      min-width: 2.6ch;
+      height: 1.6em;
+      padding: 0 0.5em;
+      background: #e11c2a;  /* SL red */
+      color: #ffffff;
+      font-weight: 900;
+      border-radius: 6px;
+      font-size: 0.95em;
+      line-height: 1;
+      box-shadow:
+        inset 0 -1px 0 rgba(0,0,0,0.25),
+        0 0 6px rgba(225,28,42,0.35);
     }
 
     .dest {
@@ -99,32 +91,27 @@
       opacity: 0.95;
     }
 
-    /* Right side time: "8 min" or "22:31" */
     .time {
       justify-self: end;
       color: var(--text);
       font-weight: 900;
       font-size: clamp(22px, 3.2vw, 44px);
-      letter-spacing: 0.8px;
       font-variant-numeric: tabular-nums;
-      text-shadow:
-        0 0 6px rgba(255,176,0,0.35),
-        0 0 14px rgba(255,176,0,0.18);
-      margin-left: 12px;
+      letter-spacing: 0.8px;
+      text-shadow: 0 0 6px rgba(255,176,0,0.35), 0 0 14px rgba(255,176,0,0.18);
     }
 
-    /* Bottom small status line */
     .meta {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      gap: 12px;
       margin-top: 10px;
       padding-top: 10px;
       border-top: 1px solid rgba(255,255,255,0.06);
       font-size: 13px;
       color: var(--text-dim);
       letter-spacing: 0.4px;
-      gap: 12px;
+      align-items: center;
     }
 
     .nav {
@@ -138,18 +125,13 @@
       padding: 6px 10px;
       border-radius: 8px;
     }
-    .nav a:hover {
-      color: var(--text);
-      border-color: rgba(255,176,0,0.35);
-    }
+    .nav a:hover { color: var(--text); border-color: rgba(255,176,0,0.35); }
 
-    /* Subtle LED “pixel grid” effect over the sign */
     .sign::after{
       content:"";
       position:absolute;
       inset:0;
-      background-image:
-        radial-gradient(rgba(255,255,255,0.06) 1px, transparent 1px);
+      background-image: radial-gradient(rgba(255,255,255,0.06) 1px, transparent 1px);
       background-size: 6px 6px;
       opacity: 0.18;
       pointer-events:none;
@@ -164,22 +146,26 @@
       <div id="rows"></div>
 
       <div class="meta">
-        <div id="stopName">Kungshamra</div>
-
+        <div id="stopName">Bergshamra centrum (Metro)</div>
         <div class="nav">
           <a href="./index.html">Buses</a>
           <a href="./metro.html">Metro</a>
         </div>
-
         <div id="updatedAt"></div>
       </div>
     </div>
   </div>
 
 <script>
-const SITE_ID = 3433;     // Kungshamra
+const SITE_ID = 3432;     // Bergshamra centrum
 const MAX_ROWS = 4;
 const POLL_MS = 30000;
+
+function escapeHtml(s) {
+  return String(s ?? "").replace(/[&<>"']/g, (c) => ({
+    "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;"
+  }[c]));
+}
 
 function render(rows) {
   const container = document.getElementById("rows");
@@ -189,8 +175,8 @@ function render(rows) {
     container.innerHTML = `
       <div class="row">
         <div class="left">
-          <div class="line">--</div>
-          <div class="dest">No departures</div>
+          <div class="metro-badge">--</div>
+          <div class="dest">No metro departures</div>
         </div>
         <div class="time"></div>
       </div>
@@ -203,19 +189,13 @@ function render(rows) {
     el.className = "row";
     el.innerHTML = `
       <div class="left">
-        <div class="line">${escapeHtml(r.line)}</div>
+        <div class="metro-badge">${escapeHtml(r.line)}</div>
         <div class="dest">${escapeHtml(r.dest)}</div>
       </div>
       <div class="time">${escapeHtml(r.display)}</div>
     `;
     container.appendChild(el);
   }
-}
-
-function escapeHtml(s) {
-  return String(s ?? "").replace(/[&<>"']/g, (c) => ({
-    "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;"
-  }[c]));
 }
 
 async function fetchDepartures() {
@@ -227,9 +207,9 @@ async function fetchDepartures() {
   const deps = Array.isArray(data?.departures) ? data.departures : [];
 
   const rows = deps
-    .filter(d => d?.line?.transport_mode === "BUS")
+    .filter(d => d?.line?.transport_mode === "METRO")
     .map(d => ({
-      line: d?.line?.designation ?? "?",
+      line: d?.line?.designation ?? "T",
       dest: d?.destination ?? d?.direction ?? "",
       display: d?.display ?? ""
     }))
