--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kungshamra – SL LED Display</title>
+  <title>SL Display – Kungshamra / Bergshamra</title>
 
   <!-- Fullscreen / PWA -->
   <meta name="theme-color" content="#0b0b0c">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="mobile-web-app-capable" content="yes">
-  <link rel="manifest" href="data:application/json,{&quot;name&quot;:&quot;SL Display&quot;,&quot;short_name&quot;:&quot;SL&quot;,&quot;display&quot;:&quot;standalone&quot;,&quot;start_url&quot;:&quot;.&quot;,&quot;theme_color&quot;:&quot;#0b0b0c&quot;,&quot;background_color&quot;:&quot;#0b0b0c&quot;}">
+  <link rel="manifest" href='data:application/json,{"name":"SL Display","short_name":"SL","display":"standalone","start_url":".","theme_color":"#0b0b0c","background_color":"#0b0b0c"}'>
 
   <style>
     :root{
       --bg: #0b0b0c;
       --panel: #0f0f11;
-      --border: #2a2a2e;
-      --text: #ffb000;     /* amber */
+      --text: #ffb000;
       --text-dim: rgba(255,176,0,0.75);
     }
 
@@ -27,26 +26,18 @@
       padding: 0;
       background: var(--bg);
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      overflow: hidden;
     }
 
     * { -webkit-tap-highlight-color: transparent; }
     body { user-select: none; -webkit-user-select: none; touch-action: manipulation; }
 
-    .frame {
-      height: 100vh;
-      display: grid;
-      place-items: center;
-      padding: 0;
-    }
+    .frame { height: 100vh; display: grid; place-items: center; padding: 0; }
 
-    /* LED sign container */
     .sign {
       width: 100vw;
       height: 100vh;
       background: var(--panel);
-      border: none;
-      border-radius: 0;
-      box-shadow: none;
       padding:
         calc(20px + env(safe-area-inset-top))
         calc(20px + env(safe-area-inset-right))
@@ -59,7 +50,51 @@
       overflow: hidden;
     }
 
-    /* Rows look like a single LED panel line */
+    /* Desktop styles */
+    @media (min-width: 768px) {
+      .frame {
+        padding: 20px;
+      }
+      
+      .sign {
+        width: min(1200px, 90vw);
+        height: auto;
+        min-height: 60vh;
+        border: 10px solid #1a1a1d;
+        border-radius: 12px;
+        box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+        padding: 30px 40px;
+      }
+    }
+
+    /* PWA fullscreen mode - force mobile layout */
+    @media (display-mode: standalone) {
+      .frame {
+        padding: 0 !important;
+      }
+      
+      .sign {
+        width: 100vw !important;
+        height: 100vh !important;
+        border: none !important;
+        border-radius: 0 !important;
+        box-shadow: none !important;
+        padding:
+          calc(20px + env(safe-area-inset-top))
+          calc(20px + env(safe-area-inset-right))
+          calc(20px + env(safe-area-inset-bottom))
+          calc(20px + env(safe-area-inset-left)) !important;
+      }
+    }
+
+    .rows {
+      /* Reserve height so meta bar doesn't shift content */
+      flex: 1 1 auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
     .row {
       display: grid;
       grid-template-columns: 1fr auto;
@@ -69,26 +104,50 @@
     }
     .row:first-child { border-top: 0; }
 
-    /* Left side: "540 Universitetet" */
     .left {
       display: flex;
       gap: 18px;
       align-items: baseline;
-      min-width: 0; /* enables ellipsis */
+      min-width: 0;
       color: var(--text);
       font-weight: 800;
-      font-size: clamp(22px, 3.2vw, 44px);
+      font-size: clamp(18px, 3.2vw, 36px);
       letter-spacing: 0.8px;
-      text-transform: none;
       text-shadow:
         0 0 6px rgba(255,176,0,0.35),
         0 0 14px rgba(255,176,0,0.18);
+    }
+
+    @media (min-width: 768px) {
+      .left {
+        font-size: clamp(24px, 2.5vw, 42px);
+      }
     }
 
     .line {
       flex: 0 0 auto;
       width: 3.4ch;
       text-align: left;
+    }
+
+    /* Metro line badge */
+    .metro-badge {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      min-width: 2.6ch;
+      height: 1.6em;
+      padding: 0 0.5em;
+      background: #e11c2a;
+      color: #ffffff;
+      font-weight: 900;
+      border-radius: 6px;
+      font-size: 0.95em;
+      line-height: 1;
+      box-shadow:
+        inset 0 -1px 0 rgba(0,0,0,0.25),
+        0 0 6px rgba(225,28,42,0.35);
+      flex: 0 0 auto;
     }
 
     .dest {
@@ -99,12 +158,11 @@
       opacity: 0.95;
     }
 
-    /* Right side time: "8 min" or "22:31" */
     .time {
       justify-self: end;
       color: var(--text);
       font-weight: 900;
-      font-size: clamp(22px, 3.2vw, 44px);
+      font-size: clamp(18px, 3.2vw, 36px);
       letter-spacing: 0.8px;
       font-variant-numeric: tabular-nums;
       text-shadow:
@@ -113,8 +171,14 @@
       margin-left: 12px;
     }
 
-    /* Bottom small status line */
+    @media (min-width: 768px) {
+      .time {
+        font-size: clamp(24px, 2.5vw, 42px);
+      }
+    }
+
     .meta {
+      flex: 0 0 auto;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -127,29 +191,28 @@
       gap: 12px;
     }
 
-    .nav {
-      display: flex;
-      gap: 10px;
-    }
-    .nav a {
+    .nav { display: flex; gap: 8px; }
+    .nav button {
+      appearance: none;
+      background: transparent;
       color: var(--text-dim);
-      text-decoration: none;
       border: 1px solid rgba(255,255,255,0.10);
       padding: 6px 10px;
       border-radius: 8px;
+      font: inherit;
+      cursor: pointer;
     }
-    .nav a:hover {
+    .nav button.active {
       color: var(--text);
       border-color: rgba(255,176,0,0.35);
+      box-shadow: 0 0 10px rgba(255,176,0,0.10);
     }
 
-    /* Subtle LED “pixel grid” effect over the sign */
     .sign::after{
       content:"";
       position:absolute;
       inset:0;
-      background-image:
-        radial-gradient(rgba(255,255,255,0.06) 1px, transparent 1px);
+      background-image: radial-gradient(rgba(255,255,255,0.06) 1px, transparent 1px);
       background-size: 6px 6px;
       opacity: 0.18;
       pointer-events:none;
@@ -161,14 +224,14 @@
 <body>
   <div class="frame">
     <div class="sign">
-      <div id="rows"></div>
+      <div id="rows" class="rows"></div>
 
       <div class="meta">
-        <div id="stopName">Kungshamra</div>
+        <div id="title">Kungshamra (Buses)</div>
 
         <div class="nav">
-          <a href="./index.html">Buses</a>
-          <a href="./metro.html">Metro</a>
+          <button id="btnBus" class="active" type="button">Buses</button>
+          <button id="btnMetro" type="button">Metro</button>
         </div>
 
         <div id="updatedAt"></div>
@@ -177,9 +240,31 @@
   </div>
 
 <script>
-const SITE_ID = 3433;     // Kungshamra
+const BUS_SITE_ID   = 3433; // Kungshamra
+const METRO_SITE_ID = 3432; // Bergshamra centrum
 const MAX_ROWS = 4;
-const POLL_MS = 30000;
+const POLL_MS  = 30000;
+
+let mode = "BUS"; // "BUS" | "METRO"
+let timer = null;
+
+function escapeHtml(s) {
+  return String(s ?? "").replace(/[&<>"']/g, (c) => ({
+    "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;"
+  }[c]));
+}
+
+function setMode(next) {
+  mode = next;
+
+  document.getElementById("btnBus").classList.toggle("active", mode === "BUS");
+  document.getElementById("btnMetro").classList.toggle("active", mode === "METRO");
+  document.getElementById("title").textContent =
+    mode === "BUS" ? "Kungshamra (Buses)" : "Bergshamra centrum (Metro)";
+
+  // Refresh immediately without reloading the page
+  tick();
+}
 
 function render(rows) {
   const container = document.getElementById("rows");
@@ -189,7 +274,10 @@ function render(rows) {
     container.innerHTML = `
       <div class="row">
         <div class="left">
-          <div class="line">--</div>
+          ${mode === "METRO"
+            ? `<div class="metro-badge">--</div>`
+            : `<div class="line">--</div>`
+          }
           <div class="dest">No departures</div>
         </div>
         <div class="time"></div>
@@ -201,9 +289,14 @@ function render(rows) {
   for (const r of rows.slice(0, MAX_ROWS)) {
     const el = document.createElement("div");
     el.className = "row";
+
+    const leftBadge = (mode === "METRO")
+      ? `<div class="metro-badge">${escapeHtml(r.line)}</div>`
+      : `<div class="line">${escapeHtml(r.line)}</div>`;
+
     el.innerHTML = `
       <div class="left">
-        <div class="line">${escapeHtml(r.line)}</div>
+        ${leftBadge}
         <div class="dest">${escapeHtml(r.dest)}</div>
       </div>
       <div class="time">${escapeHtml(r.display)}</div>
@@ -212,45 +305,57 @@ function render(rows) {
   }
 }
 
-function escapeHtml(s) {
-  return String(s ?? "").replace(/[&<>"']/g, (c) => ({
-    "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;"
-  }[c]));
-}
+async function fetchDeparturesForCurrentMode() {
+  const siteId = (mode === "BUS") ? BUS_SITE_ID : METRO_SITE_ID;
+  const url = `https://transport.integration.sl.se/v1/sites/${siteId}/departures`;
 
-async function fetchDepartures() {
-  const url = `https://transport.integration.sl.se/v1/sites/${SITE_ID}/departures`;
   const res = await fetch(url, { cache: "no-store" });
   if (!res.ok) throw new Error(`HTTP ${res.status}`);
   const data = await res.json();
-
   const deps = Array.isArray(data?.departures) ? data.departures : [];
 
   const rows = deps
-    .filter(d => d?.line?.transport_mode === "BUS")
+    .filter(d => {
+      const tm = d?.line?.transport_mode;
+      return mode === "BUS" ? tm === "BUS" : tm === "METRO";
+    })
     .map(d => ({
-      line: d?.line?.designation ?? "?",
+      line: d?.line?.designation ?? (mode === "METRO" ? "T" : "?"),
       dest: d?.destination ?? d?.direction ?? "",
       display: d?.display ?? ""
     }))
     .filter(r => r.display);
 
-  render(rows);
-
-  document.getElementById("updatedAt").textContent =
-    `Updated ${new Date().toLocaleTimeString([], { hour: "2-digit", minute: "2-digit" })}`;
+  return rows;
 }
 
-async function loop() {
+async function tick() {
   try {
-    await fetchDepartures();
+    const rows = await fetchDeparturesForCurrentMode();
+    render(rows);
+
+    document.getElementById("updatedAt").textContent =
+      `Updated ${new Date().toLocaleTimeString([], { hour: "2-digit", minute: "2-digit" })}`;
   } catch (e) {
     render([{ line: "--", dest: "Offline / error", display: "" }]);
   }
-  setTimeout(loop, POLL_MS);
 }
 
-loop();
+function startLoop() {
+  if (timer) clearTimeout(timer);
+
+  const loop = async () => {
+    await tick();
+    timer = setTimeout(loop, POLL_MS);
+  };
+
+  loop();
+}
+
+document.getElementById("btnBus").addEventListener("click", () => setMode("BUS"));
+document.getElementById("btnMetro").addEventListener("click", () => setMode("METRO"));
+
+startLoop();
 </script>
 </body>
 </html>
