--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         padding: 30px 40px;
       }
     }
-    
+
     @media (orientation: landscape) {
         .sign {
             padding:
@@ -173,18 +173,37 @@
     }
 
     .meta {
-      flex: 0 0 auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-top: 10px;
-      padding-top: 10px;
-      border-top: 1px solid rgba(255,255,255,0.06);
-      font-size: 13px;
-      color: var(--text-dim);
-      letter-spacing: 0.4px;
-      gap: 12px;
+    flex: 0 0 auto;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr; /* left, center, right */
+    align-items: center;
+    margin-top: 10px;
+    padding-top: 10px;
+    border-top: 1px solid rgba(255,255,255,0.06);
+    font-size: 13px;
+    color: var(--text-dim);
+    letter-spacing: 0.4px;
+    gap: 12px;
     }
+
+    #title {
+    justify-self: start;
+    min-width: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    }
+
+    .nav {
+    justify-self: center;
+    }
+
+    #updatedAt {
+    justify-self: end;
+    white-space: nowrap; /* never wrap */
+    font-variant-numeric: tabular-nums;
+    }
+
 
     .nav { display: flex; gap: 8px; }
     .nav button {
