--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       --text-dim: rgba(255,176,0,0.75);
     }
 
+    /* Fix clipping/layout math across devices */
+    *, *::before, *::after { box-sizing: border-box; }
+
     html, body {
       height: 100%;
       margin: 0;
@@ -52,9 +55,7 @@
 
     /* Desktop styles */
     @media (min-width: 768px) {
-      .frame {
-        padding: 20px;
-      }
+      .frame { padding: 20px; }
 
       .sign {
         width: min(1200px, 90vw);
@@ -67,24 +68,24 @@
       }
     }
 
+    /* Landscape: reduce padding so nothing clips */
     @media (orientation: landscape) {
-        .sign {
-            padding:
-            calc(10px + env(safe-area-inset-top))
-            calc(12px + env(safe-area-inset-right))
-            calc(10px + env(safe-area-inset-bottom))
-            calc(12px + env(safe-area-inset-left));
-        }
+      .sign {
+        padding:
+          calc(10px + env(safe-area-inset-top))
+          calc(12px + env(safe-area-inset-right))
+          calc(10px + env(safe-area-inset-bottom))
+          calc(12px + env(safe-area-inset-left));
+      }
 
-        .row { padding: 10px 10px; }
-        .meta { margin-top: 6px; padding-top: 6px; }
+      .row { padding: 10px 10px; }
+      .meta { margin-top: 6px; padding-top: 6px; font-size: 12px; }
     }
-
 
     .rows {
       flex: 1 1 auto;
       min-height: 0;                 /* critical for flex scrolling */
-      overflow-y: auto;              /* scroll rows area */
+      overflow-y: auto;              /* scroll rows area if needed */
       -webkit-overflow-scrolling: touch;
       display: flex;
       flex-direction: column;
@@ -115,9 +116,7 @@
     }
 
     @media (min-width: 768px) {
-      .left {
-        font-size: clamp(24px, 2.5vw, 42px);
-      }
+      .left { font-size: clamp(24px, 2.5vw, 42px); }
     }
 
     .line {
@@ -164,48 +163,50 @@
         0 0 6px rgba(255,176,0,0.35),
         0 0 14px rgba(255,176,0,0.18);
       margin-left: 12px;
+      white-space: nowrap;
     }
 
     @media (min-width: 768px) {
-      .time {
-        font-size: clamp(24px, 2.5vw, 42px);
-      }
+      .time { font-size: clamp(24px, 2.5vw, 42px); }
     }
 
+    /* Meta as a 3-column grid + extra safe-area padding so Updated never clips */
     .meta {
-    flex: 0 0 auto;
-    display: grid;
-    grid-template-columns: 1fr auto 1fr; /* equal left and right columns */
-    align-items: center;
-    margin-top: 10px;
-    padding-top: 10px;
-    border-top: 1px solid rgba(255,255,255,0.06);
-    font-size: 13px;
-    color: var(--text-dim);
-    letter-spacing: 0.4px;
-    gap: 8px;
+      flex: 0 0 auto;
+      display: grid;
+      grid-template-columns: 1fr auto 1fr;
+      align-items: center;
+
+      margin-top: 10px;
+      padding-top: 10px;
+
+      padding-left:  calc(10px + env(safe-area-inset-left));
+      padding-right: calc(10px + env(safe-area-inset-right));
+
+      border-top: 1px solid rgba(255,255,255,0.06);
+      font-size: 13px;
+      color: var(--text-dim);
+      letter-spacing: 0.4px;
+      gap: 8px;
     }
 
     #title {
-    justify-self: start;
-    min-width: 0;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+      justify-self: start;
+      min-width: 0;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
 
-    .nav {
-    justify-self: center;
-    }
+    .nav { justify-self: center; display: flex; gap: 8px; }
 
     #updatedAt {
-    justify-self: end;
-    white-space: nowrap; /* never wrap */
-    font-variant-numeric: tabular-nums;
+      justify-self: end;
+      white-space: nowrap;
+      font-variant-numeric: tabular-nums;
+      padding-right: env(safe-area-inset-right); /* extra safety */
     }
 
-
-    .nav { display: flex; gap: 8px; }
     .nav button {
       appearance: none;
       background: transparent;
@@ -256,7 +257,7 @@
 <script>
 const BUS_SITE_ID   = 3433; // Kungshamra
 const METRO_SITE_ID = 3432; // Bergshamra centrum
-const MAX_ROWS = 4;         // increased so scrolling is useful
+const MAX_ROWS = 4;
 const POLL_MS  = 30000;
 
 let mode = "BUS";
